--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,15 @@ body {
   background-color: azure;
 }
 
+.jumbotron h1 {
+  font-size: 80px;
+  font-family: 'Brush Script MT';
+}
+
+.jumbotron p {
+  font-size: 30px;
+}
+
 .about img {
   float: left;
   display: block;
