--- a/css/styles.css
+++ b/css/styles.css
@@ -51,3 +51,23 @@ h2 {
   font-weight: bold;
   font-style: italic;
 }
+
+.nav li {
+  list-style-type: none;
+  float: left;
+}
+
+.nav a {
+  display: block;
+  padding: 8px;
+  background-color: #dddddd;
+}
+
+.nav a:hover {
+  color: red;
+  background-color: white;
+}
+
+.nav a:link {
+   text-decoration: none; 
+  }
